# mamba-qstate

./: .gitignore  =2.2.2  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: exp0_default.yaml  exp0_quant.yaml  exp0_quant_h1024.yaml  exp0_quant_medium.yaml  exp0_quant_strong.yaml  main_sweep.yaml
docs/: COMPUTE.md  RUNBOOK_exp0_runpod.md  SPRINT_PLAN.md
evals/: README.md
experiments/exp0_noise_injection/: diag_perprompt.py  run_exp0.py  run_exp0_quant.py  validate_harness.py
experiments/exp1_real_quant/: niah_power.py  niah_quality.py  ppl.py  ppl_asym.py  ppl_fast.py  ppl_fast_scale.py  quant.py  refresh_sweep.py  refresh_sweep_k32.py  refresh_throughput.py  resume.py  run.py  sweep.py
paper/: arxiv_outline.md  companion_essay.md  paper_skeleton.md
paper/arxiv/: .gitignore  README.md  main.tex  make_figures.py  make_hero.py  references.bib  repro.sh  requirements.txt
results/: .gitkeep
results/exp0/diagnostics/: horizon_crossover.json  perprompt_bits8_refresh0.json
results/exp0/exp0_noise_injection/: manifest.json  results.json
results/exp0/exp0_quant_h1024/: manifest.json  results.json
results/exp0/exp0_quant_medium/: manifest.json  results.json
results/exp1/: frontier.json  ppl.json  ppl_370m.json  ppl_asym.json  quality.json  quality_power.json  refresh.json  refresh_throughput.json  sweep.json
scripts/: baseline_inference.py  plot_exp0.py  plot_exp1.py  plot_refresh.py
src/qstate/: __init__.py  cpu_sim.py  metrics.py  quantizers.py  state_hook.py  utils.py
tests/: test_quantizers.py
(+11 files in other folders)
